Curve Hooks not working #82205

Closed
opened 2020-10-29 01:03:47 +01:00 by bassam kurdali · 9 comments
Member

System Information
Operating system: Linux-5.8.16-300.fc33.x86_64-x86_64-with-fedora-33-Thirty_Three 64 Bits
Graphics card: GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 455.28

Blender Version
Broken: version: 2.92.0 Alpha, branch: master, commit date: 2020-10-27 23:30, hash: d28676d89a
Worked: 2.91
Caused by a308607a53

Short description of error
Creating a hook on a bezier curve no longer works

Exact steps for others to reproduce the error
For speed, you can download the attached .blend which has a bezier curve in it.

  • The curve should be selected (select if not)
  • Press tab to go into edit mode
  • Make sure a control point is selected.
  • Press ctrl-H and select 'hook to new object' from the menu
  • Tab again to leave edit mode
  • select the newly created hook empty and move it around - it should deform the curve, but:

the hook doesn't deform the curve (tabbing into edit mode and reassigning doesn't work)

bugcurve.blend

**System Information** Operating system: Linux-5.8.16-300.fc33.x86_64-x86_64-with-fedora-33-Thirty_Three 64 Bits Graphics card: GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 455.28 **Blender Version** Broken: version: 2.92.0 Alpha, branch: master, commit date: 2020-10-27 23:30, hash: `d28676d89a` Worked: 2.91 Caused by a308607a53 **Short description of error** Creating a hook on a bezier curve no longer works **Exact steps for others to reproduce the error** For speed, you can download the attached .blend which has a bezier curve in it. - The curve should be selected (select if not) - Press tab to go into edit mode - Make sure a control point is selected. - Press ctrl-H and select 'hook to new object' from the menu - Tab again to leave edit mode - select the newly created hook empty and move it around - it should deform the curve, but: # the hook doesn't deform the curve (tabbing into edit mode and reassigning doesn't work) [bugcurve.blend](https://archive.blender.org/developer/F9119709/bugcurve.blend)
Author
Member

Added subscriber: @BassamKurdali

Added subscriber: @BassamKurdali

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Caused by a308607a53

Caused by a308607a53
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Hans Goudey self-assigned this 2020-10-29 23:59:53 +01:00
Member

Oh no, I was hoping this didn't cause any issues! I'll get right to it.

Oh no, I was hoping this didn't cause any issues! I'll get right to it.

This issue was referenced by 81a0fffb2d

This issue was referenced by 81a0fffb2d2ccb40320bec418267b0c105db19a4
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Author
Member

Thanks a bunch! glad we caught it early :)

Thanks a bunch! glad we caught it early :)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#82205
No description provided.